ADD custom theme with Angular Material dependencies
A new SCSS file, `custom-theme.scss`, has been added to define custom themes using the Material Theme Generator. Dependencies for Angular Material and Angular CDK have been included in `package.json` and `package-lock.json` to support these theming configurations. This integration enhances the app's styling and component appearance, providing both light and dark theme support.

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/custom-theme.scss"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
