--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/custom-styles/themes.scss"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
